[gd_scene load_steps=23 format=3 uid="uid://1uamy3yd7avb"]

[ext_resource type="Texture2D" uid="uid://chrt38f41fuid" path="res://Images/Alien/alien_u.png" id="1_24p4m"]
[ext_resource type="Script" path="res://alien.gd" id="1_hkjdg"]
[ext_resource type="Texture2D" uid="uid://2a2puy1hfufa" path="res://Images/Alien/alien_l.png" id="2_4b003"]
[ext_resource type="Texture2D" uid="uid://b3dena5g1kn6r" path="res://Images/Alien/alien_r.png" id="3_vg6gq"]
[ext_resource type="Texture2D" uid="uid://bp7tmlqfkki6x" path="res://Images/Alien/alien_b.png" id="4_o7jen"]
[ext_resource type="Texture2D" uid="uid://urvx8ra5u746" path="res://Images/Alien/alien_bl.png" id="5_exwdd"]
[ext_resource type="Texture2D" uid="uid://bd6s371rtc3hg" path="res://Images/Alien/alien_br.png" id="6_ndvan"]
[ext_resource type="Texture2D" uid="uid://idj1hk7j6m2c" path="res://Images/Alien/alien_ul.png" id="7_gmgkk"]
[ext_resource type="Texture2D" uid="uid://cl6r4ry0f85s6" path="res://Images/Alien/alien_ur.png" id="8_niche"]
[ext_resource type="AudioStream" uid="uid://brsgfxevcsnfb" path="res://Audio/351446__cabled_mess__oscillating-energy-loop-05.wav" id="10_jha6r"]

[sub_resource type="Animation" id="Animation_hsvkr"]
resource_name = "DownLeft"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_exwdd")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5)]
}

[sub_resource type="Animation" id="Animation_lrimc"]
resource_name = "DownRight"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_ndvan")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5)]
}

[sub_resource type="Animation" id="Animation_2vq83"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -5)]
}

[sub_resource type="Animation" id="Animation_1iioj"]
resource_name = "UpLeft"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_gmgkk")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5)]
}

[sub_resource type="Animation" id="Animation_0lbn4"]
resource_name = "UpRight"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_niche")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5)]
}

[sub_resource type="Animation" id="Animation_n14bh"]
resource_name = "down"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_o7jen")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5)]
}

[sub_resource type="Animation" id="Animation_f0lnh"]
resource_name = "left"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_4b003")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5)]
}

[sub_resource type="Animation" id="Animation_lg0np"]
resource_name = "right"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_vg6gq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5)]
}

[sub_resource type="Animation" id="Animation_txykg"]
resource_name = "up"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_24p4m")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kq8e0"]
_data = {
"DownLeft": SubResource("Animation_hsvkr"),
"DownRight": SubResource("Animation_lrimc"),
"RESET": SubResource("Animation_2vq83"),
"UpLeft": SubResource("Animation_1iioj"),
"UpRight": SubResource("Animation_0lbn4"),
"down": SubResource("Animation_n14bh"),
"left": SubResource("Animation_f0lnh"),
"right": SubResource("Animation_lg0np"),
"up": SubResource("Animation_txykg")
}

[sub_resource type="GDScript" id="GDScript_rkd8d"]
script/source = "extends AnimationPlayer

func set_dir(dir: Vector2):
	var ang = int(snapped(dir.angle(), PI/4) / (PI/4))
	
	match ang:
		-4: play('left')
		-3: play('UpLeft')
		-2: play('up')
		-1: play('UpRight')
		0: play('right')
		1: play('DownRight')
		2: play('down')
		3: play('DownLeft')
		4: play('left')
		_: push_warning(\"[Player.AnimationPlayer] Didn't recognize direction: %s\" % ang)
"

[sub_resource type="CircleShape2D" id="CircleShape2D_trb7i"]
radius = 500.0

[node name="Alien" type="RigidBody2D"]
collision_layer = 2
gravity_scale = 0.0
script = ExtResource("1_hkjdg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -5)
scale = Vector2(2, 2)
texture = ExtResource("5_exwdd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kq8e0")
}
script = SubResource("GDScript_rkd8d")

[node name="Area2D" type="Area2D" parent="." groups=["Alien"]]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_trb7i")

[node name="MoveDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_jha6r")
volume_db = -15.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="MoveDelayTimer" to="." method="_on_timer_timeout"]
